AM_CPPFLAGS = -I $(top_srcdir)/include
export AM_CPPFLAGS
SUBDIRS = src modules devel crontrib conf
	
EXTRA_DIST=rpm/tsar-build.sh  rpm/tsar.spec.in  rpm/tsar-VER.txt\
	include/common.h  include/config.h  include/debug.h include/define.h\
	include/framework.h  include/output_file.h  include/output_nagios.h \
	include/output_print.h  include/public.h  include/tsar.h
