AUTOMAKE_OPTIONS = foreign
AM_CFLAGS = \
  -I../../include \
  -Wall \
  -fPIC \
  --shared

sbindir=${libdir}
sbin_PROGRAMS=mod_swap.so mod_partition.so mod_cpu.so mod_mem.so mod_traffic.so\
	mod_load.so mod_tcp.so mod_udp.so mod_tcpx.so mod_pcsw.so mod_io.so\
	mod_ts_client.so mod_ts_os.so mod_ts_cache.so mod_ts_err.so mod_ts_storage.so \
	mod_ts_conn.so

